--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -4,13 +4,13 @@
         "description": "This project showcases my NestJS skills and integration with SvelteJS through a simple ferry ticketing system. Users can generate tickets that expire after two hours or two uses. While the frontend/authentication is functional, it’s not the main focus. The inspiration for this project came from NYC Ferry, during a recent trip.",
         "technologies": ["NestJS", "SvelteJS", "MySQL", "Prisma"],
         "link": "https://github.com/rafaelbardsouza/Ferry-Tickets",
-        "image": "src/assets/img/ferry.jpg"
+        "image": "/ferry.jpg"
     },
     {
         "name":"YxelWorks Website",
         "description":"My personal freelance website, where I offer professional web development services. Built with ReactJS and SCSS, this site showcases my expertise in web development and design, reflecting my commitment to delivering high-quality solutions for clients.",
         "technologies":["ReactJS", "Scss"],
         "link":"https://yxel.tech",
-        "image":"src/assets/img/yxel.png"
+        "image":"/yxel.png"
     }
 ]
